stl contest: 2nd problem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "xstring": "cpp",
         "xutility": "cpp",
         "queue": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "stack": "cpp",
+        "utility": "cpp"
     }
 }
